--- a/LITERAS/static/index.html
+++ b/LITERAS/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Citex - Citation Retrieval Assistant</title>
+    <title>LITERAS - Literature Review and Citation Retrieval Agents</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/12.3.2/markdown-it.min.js"></script>
     <style>
